--- a/workflow.yaml
+++ b/workflow.yaml
@@ -11,8 +11,7 @@ spec:
     - name: git_ref_type
       value: branches
     - name: git_version
-      value: feature/init
-      # value: main
+      value: main
   templates:
   - name: main
     inputs:
